# Safe-route

./: README.md
src/: .env.example  .gitignore  README.md  docker-compose.yml  vercel.json
src/backend/: Dockerfile  conftest.py  manage.py  pyproject.toml  pytest.ini
src/backend/core/: __init__.py  api.py
src/backend/routing/: apps.py  exceptions.py  urls.py
src/backend/routing/services/: PedestrianRoutingService.py  ServiceContainer.py  __init__.py
src/backend/routing/tests/: __init__.py  test_api.py  test_graph_calculator.py
src/backend/routing/utils/: DatasetFileManager.py  DatasetValidator.py  GeocodingManager.py  GraphCalculator.py  RequestValidator.py  __init__.py
src/backend/routing/views/: RoutingAPIViews.py  __init__.py
src/backend/safe_route/: settings.py  settings_development.py  settings_production.py  settings_testing.py  urls.py  wsgi.py
src/frontend/: .prettierrc.json  Dockerfile  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
src/frontend/src/: main.tsx  styles.css
src/frontend/src/app/: app.tsx  error-boundary.tsx  global.css  providers.tsx
src/frontend/src/features/routing/api/: routing-api.ts
src/frontend/src/features/routing/components/: location-search.tsx  route-summary.tsx  routing-map.tsx  routing-page.tsx
src/frontend/src/lib/: api-client.ts
