[project]
name = "safe-route-backend"
version = "1.0.0"
description = "Django REST API for pedestrian routes with harassment-risk weighting."
requires-python = ">=3.12"
dependencies = [
    "Django>=5.0,<6.0",
    "djangorestframework>=3.15,<4.0",
    "django-cors-headers>=4.3,<5.0",
    "requests>=2.31,<3.0",
]

[tool.vercel]
entrypoint = "safe_route.wsgi:application"

[tool.ruff]
target-version = "py312"
line-length = 120
extend-exclude = ["migrations"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
"safe_route/settings_*.py" = ["F403", "F405"]
